--- a/app/src/main/res/layout/activity_show_starship.xml
+++ b/app/src/main/res/layout/activity_show_starship.xml
@@ -14,7 +14,7 @@
         android:textSize="33sp"
         android:layout_marginTop="15dp"
         android:textColor="@android:color/black"
-        android:text="@string/planetsTitle"
+        android:text="STARSHIPS"
         app:layout_constraintVertical_bias="0"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
