--- a/app/src/main/res/layout/fragment_show_vehicle.xml
+++ b/app/src/main/res/layout/fragment_show_vehicle.xml
@@ -5,22 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorPrimary"
-    tools:context=".ui.ShowVehicleFragment">
-
-    <TextView
-        android:id="@+id/tvSearchActivityErro"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="33sp"
-        android:layout_marginTop="15dp"
-        android:textColor="@android:color/black"
-        android:text="VEHICLES"
-        app:layout_constraintVertical_bias="0"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        />
+    tools:context=".ui.fragment.ShowVehicleFragment">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvSearchActivityList"
