--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -7,54 +7,105 @@
 
     <fragment
         android:id="@+id/baseFragment"
-        android:name="com.example.starwarsapi.ui.BaseFragment"
-        android:label="BaseFragment" >
+        android:name="com.example.starwarsapi.ui.fragment.BaseFragment"
+        android:label="Menu">
         <action
             android:id="@+id/action_baseFragment_to_showFilmFragment"
-            app:destination="@id/showFilmFragment" />
+            app:destination="@id/showFilmFragment"
+            app:enterAnim="@anim/fragment_close_enter"
+            app:exitAnim="@anim/fragment_close_exit" />
         <action
             android:id="@+id/action_baseFragment_to_showSpecieFragment"
-            app:destination="@id/showSpecieFragment" />
+            app:destination="@id/showSpecieFragment"
+            app:enterAnim="@anim/fragment_close_enter"
+            app:exitAnim="@anim/fragment_close_exit" />
         <action
             android:id="@+id/action_baseFragment_to_showPeopleFragment"
-            app:destination="@id/showPeopleFragment" />
+            app:destination="@id/showPeopleFragment"
+            app:enterAnim="@anim/fragment_close_enter"
+            app:exitAnim="@anim/fragment_close_exit" />
         <action
             android:id="@+id/action_baseFragment_to_showPlanetFragment"
-            app:destination="@id/showPlanetFragment" />
+            app:destination="@id/showPlanetFragment"
+            app:enterAnim="@anim/fragment_close_enter"
+            app:exitAnim="@anim/fragment_close_exit" />
         <action
             android:id="@+id/action_baseFragment_to_showVehicleFragment"
-            app:destination="@id/showVehicleFragment" />
+            app:destination="@id/showVehicleFragment"
+            app:enterAnim="@anim/fragment_close_enter"
+            app:exitAnim="@anim/fragment_close_exit" />
         <action
             android:id="@+id/action_baseFragment_to_showStarshipFragment"
-            app:destination="@id/showStarshipFragment" />
+            app:destination="@id/showStarshipFragment"
+            app:enterAnim="@anim/fragment_close_enter"
+            app:exitAnim="@anim/fragment_close_exit" />
     </fragment>
     <fragment
         android:id="@+id/showFilmFragment"
-        android:name="com.example.starwarsapi.ui.ShowFilmFragment"
-        android:label="fragment_show_film"
+        android:name="com.example.starwarsapi.ui.fragment.ShowFilmFragment"
+        android:label="Films"
         tools:layout="@layout/fragment_show_film" />
     <fragment
         android:id="@+id/showPlanetFragment"
-        android:name="com.example.starwarsapi.ui.ShowPlanetFragment"
-        android:label="fragment_show_starship"
+        android:name="com.example.starwarsapi.ui.fragment.ShowPlanetFragment"
+        android:label="Planets"
         tools:layout="@layout/fragment_show_starship" />
     <fragment
         android:id="@+id/showPeopleFragment"
-        android:name="com.example.starwarsapi.ui.ShowPeopleFragment"
-        android:label="fragment_show_people"
-        tools:layout="@layout/fragment_show_people" />
+        android:name="com.example.starwarsapi.ui.fragment.ShowPeopleFragment"
+        android:label="Peoples"
+        tools:layout="@layout/fragment_show_people" >
+        <action
+            android:id="@+id/action_showPeopleFragment_to_detailPeopleFragment"
+            app:destination="@id/detailPeopleFragment" />
+    </fragment>
     <fragment
         android:id="@+id/showSpecieFragment"
-        android:name="com.example.starwarsapi.ui.ShowSpecieFragment"
-        android:label="fragment_show_specie"
+        android:name="com.example.starwarsapi.ui.fragment.ShowSpecieFragment"
+        android:label="Species"
         tools:layout="@layout/fragment_show_specie" />
     <fragment
         android:id="@+id/showVehicleFragment"
-        android:name="com.example.starwarsapi.ui.ShowVehicleFragment"
-        android:label="fragment_show_vehicle"
-        tools:layout="@layout/fragment_show_vehicle" />
+        android:name="com.example.starwarsapi.ui.fragment.ShowVehicleFragment"
+        android:label="Vehicles"
+        tools:layout="@layout/fragment_show_vehicle" >
+        <action
+            android:id="@+id/action_showVehicleFragment_to_detailVehicleFragment"
+            app:destination="@id/detailVehicleFragment" />
+    </fragment>
     <fragment
         android:id="@+id/showStarshipFragment"
-        android:name="com.example.starwarsapi.ui.ShowStarshipFragment"
-        android:label="ShowStarshipFragment" />
+        android:name="com.example.starwarsapi.ui.fragment.ShowStarshipFragment"
+        android:label="Starships" >
+        <action
+            android:id="@+id/action_showStarshipFragment_to_detailStarshipFragment"
+            app:destination="@id/detailStarshipFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/detailPeopleFragment"
+        android:name="com.example.starwarsapi.ui.fragment.DetailPeopleFragment"
+        android:label="DetailPeopleFragment"
+        tools:layout="@layout/detail_people_fragment">
+        <argument
+            android:name="People"
+            app:argType="com.example.starwarsapi.models.People" />
+    </fragment>
+    <fragment
+        android:id="@+id/detailStarshipFragment"
+        android:name="com.example.starwarsapi.ui.fragment.DetailStarshipFragment"
+        android:label="detail_starship_fragment"
+        tools:layout="@layout/detail_starship_fragment" >
+        <argument
+            android:name="Starship"
+            app:argType="com.example.starwarsapi.models.Starships" />
+    </fragment>
+    <fragment
+        android:id="@+id/detailVehicleFragment"
+        android:name="com.example.starwarsapi.ui.fragment.DetailVehicleFragment"
+        android:label="detail_vehicle_fragment"
+        tools:layout="@layout/detail_vehicle_fragment" >
+        <argument
+            android:name="Vehicle"
+            app:argType="com.example.starwarsapi.models.Vehicles" />
+    </fragment>
 </navigation>
