--- a/app/src/main/res/layout/fragment_show_vehicle.xml
+++ b/app/src/main/res/layout/fragment_show_vehicle.xml
@@ -7,11 +7,22 @@
     android:background="@color/colorPrimary"
     tools:context=".ui.fragment.ShowVehicleFragment">
 
+
+    <androidx.appcompat.widget.SearchView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/svVehicle"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="45dp"
+        android:layout_marginEnd="35dp"
+        />
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvSearchActivityList"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="60dp"
+        android:layout_marginTop="90dp"
         tools:listitem="@layout/item_adapter_list"
         app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
         app:spanCount="2"
@@ -19,7 +30,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toBottomOf="@+id/svVehicle">
 
     </androidx.recyclerview.widget.RecyclerView>
 
