--- a/app/src/main/res/layout/fragment_show_people.xml
+++ b/app/src/main/res/layout/fragment_show_people.xml
@@ -8,28 +8,27 @@
     tools:context=".ui.fragment.ShowPeopleFragment">
 
     <androidx.appcompat.widget.SearchView
+        android:id="@+id/svPeople"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/svPeople"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginTop="45dp"
         android:layout_marginEnd="35dp"
-        />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvSearchActivityList"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginTop="90dp"
-        tools:listitem="@layout/item_adapter_list"
-        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
-        app:spanCount="2"
         android:orientation="vertical"
+        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/svPeople">
+        app:layout_constraintTop_toBottomOf="@id/svPeople"
+        app:spanCount="2"
+        tools:listitem="@layout/item_adapter_list">
 
     </androidx.recyclerview.widget.RecyclerView>
 
@@ -37,12 +36,11 @@
         android:id="@+id/progressBar"
         android:layout_width="50dp"
         android:layout_height="50dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
         android:visibility="gone"
-        />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
