--- a/app/src/main/res/layout/detail_people_fragment.xml
+++ b/app/src/main/res/layout/detail_people_fragment.xml
@@ -108,7 +108,7 @@
             android:layout_marginTop="5dp"
             android:orientation="horizontal"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-            tools:listitem="@layout/item_adapter_list"></androidx.recyclerview.widget.RecyclerView>
+            tools:listitem="@layout/item_adapter_list" />
 
         <TextView
             android:id="@+id/tvStarshipText"
@@ -129,7 +129,7 @@
             android:layout_marginTop="5dp"
             android:orientation="horizontal"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-            tools:listitem="@layout/item_adapter_list"></androidx.recyclerview.widget.RecyclerView>
+            tools:listitem="@layout/item_adapter_list" />
 
 
         <ProgressBar
