--- a/app/src/main/res/layout/nav_header.xml
+++ b/app/src/main/res/layout/nav_header.xml
@@ -3,7 +3,7 @@
     android:id="@+id/nav_header"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/colorAccent"
+    android:background="#FFFFFF"
     android:clickable="true"
     android:focusable="true"
     android:foreground="?attr/selectableItemBackgroundBorderless"
@@ -19,6 +19,7 @@
         android:layout_height="wrap_content"
         android:textColor="#000000"
         android:textSize="22sp"
+        android:gravity="center"
         android:text="Star Wars API"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
 </LinearLayout>
